<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layout_marginLeft="15dp"
	android:layout_marginRight="15dp"
    android:orientation="vertical"
    android:background="@drawable/back_a"
    tools:context=".MainActivity" >

	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

		    <LinearLayout
		        android:id="@+id/disp_rel1"
    			android:orientation="vertical"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="70dp"
		        android:layout_marginTop="50dp"
		        android:background="@drawable/center_clicked" >
		
		        <TextView
		            android:id="@+id/bogus_ttl"
			        android:text="@string/bogus_ttl"
			        android:textColor="@color/brown"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
			        android:textStyle="bold"
		            android:gravity="center_horizontal|center_vertical"
		        	android:layout_marginTop="35dp"
		    		android:layout_marginBottom="20dp"
		            android:textAppearance="?android:attr/textAppearanceLarge"
		            android:textSize="30sp" />

			    <RelativeLayout
			        android:id="@+id/disp_rel2"
	    			android:orientation="vertical"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="15dp" >

			        <TextView
			            android:id="@+id/bogus_txt"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_alignParentLeft="true"
			            android:layout_alignParentTop="true"
			            android:layout_marginLeft="14dp"
			            android:maxWidth="230dp"
			            android:text="@string/bogus_txt"
			            android:textAppearance="?android:attr/textAppearanceLarge"
			            android:textColor="@color/brown"
			            android:textSize="20sp" />

			        <TextView
			            android:id="@+id/bogus_price"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_alignParentRight="true"
			            android:layout_alignParentTop="true"
			            android:layout_marginRight="14dp"
			            android:gravity="center_horizontal"
			            android:text="@string/bogus_price"
			            android:textAppearance="?android:attr/textAppearanceLarge"
			            android:textColor="@color/brown"
			            android:textSize="20sp"
			            android:textStyle="bold" />

		    	</RelativeLayout>
			
		    </LinearLayout>
	</ScrollView>
</LinearLayout>